---
source: tsparser/src/parser/types/tests.rs
expression: result
input_file: tsparser/src/parser/types/testdata/basic.ts
---
{
    "Interface": Interface(
        Interface {
            fields: [
                InterfaceField {
                    name: "foo",
                    typ: Basic(
                        String,
                    ),
                    optional: false,
                },
                InterfaceField {
                    name: "bar",
                    typ: Basic(
                        Number,
                    ),
                    optional: false,
                },
                InterfaceField {
                    name: "optional",
                    typ: Basic(
                        Boolean,
                    ),
                    optional: true,
                },
            ],
            index: None,
            call: None,
        },
    ),
    "Exclude1": Union(
        [
            Literal(
                String(
                    "bar",
                ),
            ),
            Literal(
                String(
                    "optional",
                ),
            ),
        ],
    ),
    "Pick1": Interface(
        Interface {
            fields: [
                InterfaceField {
                    name: "foo",
                    typ: Basic(
                        String,
                    ),
                    optional: false,
                },
            ],
            index: None,
            call: None,
        },
    ),
    "Pick2": Interface(
        Interface {
            fields: [
                InterfaceField {
                    name: "foo",
                    typ: Basic(
                        String,
                    ),
                    optional: false,
                },
                InterfaceField {
                    name: "optional",
                    typ: Basic(
                        Boolean,
                    ),
                    optional: true,
                },
            ],
            index: None,
            call: None,
        },
    ),
    "Omit1": Interface(
        Interface {
            fields: [
                InterfaceField {
                    name: "bar",
                    typ: Basic(
                        Number,
                    ),
                    optional: false,
                },
                InterfaceField {
                    name: "optional",
                    typ: Basic(
                        Boolean,
                    ),
                    optional: true,
                },
            ],
            index: None,
            call: None,
        },
    ),
    "Omit2": Interface(
        Interface {
            fields: [
                InterfaceField {
                    name: "optional",
                    typ: Basic(
                        Boolean,
                    ),
                    optional: true,
                },
            ],
            index: None,
            call: None,
        },
    ),
    "Partial1": Interface(
        Interface {
            fields: [
                InterfaceField {
                    name: "foo",
                    typ: Basic(
                        String,
                    ),
                    optional: true,
                },
                InterfaceField {
                    name: "bar",
                    typ: Basic(
                        Number,
                    ),
                    optional: true,
                },
                InterfaceField {
                    name: "optional",
                    typ: Basic(
                        Boolean,
                    ),
                    optional: true,
                },
            ],
            index: None,
            call: None,
        },
    ),
    "Index": Interface(
        Interface {
            fields: [],
            index: Some(
                (
                    Basic(
                        String,
                    ),
                    Union(
                        [
                            Basic(
                                Boolean,
                            ),
                            Basic(
                                Number,
                            ),
                        ],
                    ),
                ),
            ),
            call: None,
        },
    ),
}
